# soccer-challenge

./: .gitignore  README.md  cli.py  pyproject.toml
tests/: test_cli.py  test_games.py  test_league.py  test_parse_games.py  test_process_games.py  test_rankings.py
